--- a/src/App.css
+++ b/src/App.css
@@ -1,113 +1,196 @@
 .App{
-  text-align: center;
-}
-
-a{
-  text-decoration: none;
-  color: #000000;
-}
-
-h1{
-  font-size: 28px;
-  text-align: center;
-  margin: 20px;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 50px;
-  align-items: center;
-  max-width: 1000px;
+  min-height: 100vh;
+  max-width: 1200px;
   margin: auto;
-  border-bottom: 1px solid #d7d7d7;
-  font-size: 18px;
-  padding: 0px 10px;
+  padding: 10px 10px;
 }
 
-img{
-  max-width: 40px;
-}
-
-ul{
-  max-width: 600px;
-  margin: 50px auto;
-  padding: 20px;
-  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-}
-
-li{
-  font: 16px;
-  list-style: none;
-  margin: 20px 5px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  border-radius: 5px;
-  padding: 10px;
+header{
+  min-height: 70px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  padding: 15px;
+  margin-bottom: 70px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  box-shadow: var(--box-shadow);
+}
+
+header .logo{
+  display: flex;
   align-items: center;
 }
 
-li.completed{
-  box-shadow: rgb(62, 150, 0) 0px 1px 4px;
-}
-
-li.incomplete{
-  box-shadow: rgba(135, 20, 0, 0.689) 0px 1px 4px;
-}
-
-button.delete{
-  border: 0px;
-  border-radius: 5px;
-  background-color: #be3434;
-  color: #FFFFFF;
-  padding: 5px 10px;
+header .logo img{
+  max-width: 40px;
   cursor: pointer;
 }
 
-button.trigger{
-  border: 0px;
-  border-radius: 5px;
-  background-color: #0F3460;
-  color: #FFFFFF;
-  padding: 5px 10px;
+header .logo span{
+  font-size: 22px;
+  margin-left: 7px;
   cursor: pointer;
+  color: #525252;
 }
 
-.box{
-  width: 400px;
+header .themeSelector span{
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-left: 5px;
+  cursor: pointer;
+  border: 1px solid #dfdfdf;
+}
+
+header .themeSelector .activeTheme{
+  height: 30px;
+  width: 30px;
+}
+
+.addTask {
+  padding: 20px 15px;
+  border-radius: 5px;
+  background-color: #FFFFFF;
+  max-width: 500px;
   margin: 20px auto;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  padding: 20px 5px;
-  border: 0px;
+  box-shadow: var(--box-shadow);
+}
+
+.addTask form{
+  display: flex;
+  gap: 7px;
+}
+
+.addTask form input{
+  flex-grow: 1;
+  padding: 5px 5px;
+  border: 1px solid #eaeaea;
   border-radius: 5px;
+  font-size: 18px;
 }
 
-.box.success{
-  background-color: #baffbf;
+.addTask form input:focus{
+  outline: 0.5px solid #eaeaea;
 }
 
-.box.alert{
-  background-color: #ffb4b4;
+.addTask form button{
+  background-color: #03ba5c;
+  color: #FFFFFF;
+  border: none;
+  padding: 5px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
 }
 
-.box.warning{
-  background-color: #FFDEB4;
+.addTask form button:hover{
+  background-color: #03b056;
 }
 
-.box p{
-  margin: 10px;
+.showTask{
+  padding: 20px 15px;
+  border-radius: 5px;
+  background-color: #FFFFFF;
+  margin: 20px auto;
+  box-shadow: var(--box-shadow);
 }
 
-.box p.title{
-  font-size: 20px;
+.showTask div.head{
+  padding: 10px 0px 20px 0px;
+  border-bottom: 1px solid #dfdfdf;
+  display: flex;
+  align-items: center;
 }
 
-.box p.description{
-  font-size: 14px;
+.showTask div.head div{
+  flex-grow: 1;
 }
 
-.hidden{
-  display: none;
+.showTask .title{
+  font-size: 18px;
+  font-weight: 600;
+  user-select: none;
+}
+
+.showTask .count{
+  background-color: #dfdfdf;
+  color: #525252;
+  padding: 5px 10px;
+  border-radius: 50%;
+  margin-left: 10px;
+  user-select: none;
+}
+
+.showTask .clearAll{
+  background-color: #0f6af3;
+  color: #FFFFFF;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 0px;
+  font-size: 16px;
+}
+
+.showTask .clearAll:hover{
+  background-color: #1061db;
+}
+
+.showTask ul{
+  margin: 30px 5px 20px 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+.showTask li{
+  padding: 15px 10px;
+  border-bottom: 1px solid #e5e5e5;
+  display: flex;
+  gap: 5px;
+  width: 350px;
+  box-shadow: var(--box-shadow);
+  border-radius: 5px;
+  border-left: 5px solid #1365dfaf;
+}
+
+.showTask li:hover{
+  background-color: #f8f8f8;
+}
+
+.showTask li p{
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.showTask li .name{
+  font-size: 18px;
+  padding-bottom: 5px;
+}
+
+.showTask li .time{
+  font-size: 12px;
+  color: #737373;
+}
+
+.showTask i.bi-pencil-square{
+  font-size: 18px;
+  color: #1363DF;
+  cursor: pointer;
+}
+
+.showTask i.bi-trash{
+  font-size: 18px;
+  color: #D82148;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 800px) {
+  .showTask li{
+    width: 100%;
+  }
 }
